tests/e2e/semantics/service_mutation_block.error
Error: syntax error in story at line 2, column 7

2|    b = a.get(key: "b")
            ^^^^^^^^^^^^

E0113: Mutation `get` requires argument `default`
