tests/e2e/semantics/service_mutation_block.story
a = {"a": 1}
b = a.get(key: "b")
